--- a/index-小.htm
+++ b/index-小.htm
@@ -9,223 +9,222 @@
 body {
 	background-color: #00CC99;
 }
-.style1 {font-size: 36px}
 .style4 {font-size: 18px}
+.style5 {font-size: 24px}
 -->
 </style></head>
 
 <body>
-<p align="center" class="style1">猪猪乐园</p>
-<table width="600" border="1" align="center">
+<table width="800" border="1" align="center">
   <tr bgcolor="#00CCFF">
-    <td width="110" height="40"><div align="center" class="style4">我的资源</div></td>
-    <td width="125" height="40"><div align="center" class="style4">我的网站</div></td>
-    <td width="110" height="40"><div align="center" class="style4">我的学习</div></td>
-    <td width="113" height="40"><div align="center" class="style4">我的创作</div></td>
-    <td width="108" height="40"><div align="center" class="style4"></div></td>
+    <td width="148" height="40"><div align="center" class="style5">读书笔记</div></td>
+    <td width="168" height="40"><div align="center" class="style5">我的网站</div></td>
+    <td width="148" height="40"><div align="center" class="style5">我的学习</div></td>
+    <td width="152" height="40"><div align="center" class="style5">我的创作</div></td>
+    <td width="150" height="40"><div align="center" class="style4"><span class="style5"></span></div></td>
   </tr>
   <tr>
-    <td height="40"><div align="center"><a href="https://www.hrfjw.com/" target="_blank">佛教网站</a></div></td>
-    <td height="40">&nbsp;</td>
-    <td height="40"><div align="center"><span class="style4"><a href="https://appgvxduqld1024.h5.xiaoeknow.com/p/decorate/homepage?share_user_id=u_5e6f7093cee56_KjtieEBn5C&entry=2&entry_type=2001" target="_blank">正心读书会</a></span></div></td>
-    <td><div align="center"><span class="style4"><a href="https://www.jianshu.com/" target="_blank">简书</a></span></div></td>
-    <td height="40"><div align="center"><span class="style4"></span></div></td>
+    <td height="40"><div align="center" class="style5"><a href="2-1-a-&#25105;&#30340;&#35835;&#20070;&#31508;&#35760;-001.htm" target="_blank">生命游戏(上)</a></div></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><div align="center" class="style5"><a href="https://appgvxduqld1024.h5.xiaoeknow.com/p/decorate/homepage?share_user_id=u_5e6f7093cee56_KjtieEBn5C&entry=2&entry_type=2001" target="_blank">正心读书会</a></div></td>
+    <td>&nbsp;</td>
+    <td height="40"><div align="center"><span class="style4"><span class="style5"></span></span></div></td>
   </tr>
   <tr>
-    <td height="40"><div align="center"></div></td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td><div align="center"><span class="style4"><a href="https://www.wiz.cn/zh-cn" target="_blank">为知笔记</a></span></div></td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><div align="center"><span class="style5"><a href="2-1-a-&#25105;&#30340;&#35835;&#20070;&#31508;&#35760;-002.htm" target="_blank">生命游戏(下)</a></span></div></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td>&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td><div align="center"><span class="style4"><a href="https://zhihu.com" target="_blank">知乎</a></span></div></td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td>&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td><div align="center"><span class="style4"><a href="https://shimo.im/" target="_blank">石墨文档</a></span></div></td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td>&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td><div align="center"><span class="style4"><a href="https://wx.zsxq.com" target="_blank">知识星球</a></span></div></td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td>&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
-    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
-    <td height="40"><div align="center"><span class="style4"><a href="&#29983;&#21629;&#22823;&#33258;&#22312;.htm" target="_blank">读书笔记</a></span></div></td>
-    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
-    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
+    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"><span class="style5"></span></span></a></div></td>
+    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"><span class="style5"></span></span></a></div></td>
+    <td height="40"><div align="center" class="style5"></div></td>
+    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"><span class="style5"></span></span></a></div></td>
+    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"><span class="style5"></span></span></a></div></td>
   </tr>
   <tr>
-    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
-    <td height="40"><div align="center"><span class="style4"><a href="https://github.com/github/" target="_blank">github登入</a></span></div></td>
-    <td height="40"><div align="center"><span class="style4">我的书单</span></div></td>
-    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
-    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
+    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"><span class="style5"></span></span></a></div></td>
+    <td height="40"><div align="center" class="style5"></div></td>
+    <td height="40"><div align="center" class="style5"></div></td>
+    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"><span class="style5"></span></span></a></div></td>
+    <td height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"><span class="style5"></span></span></a></div></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
-    <td height="40"><div align="center"><span class="style4"><a href="index.htm">网页版</a></span></div></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><span class="style5"></span></td>
+    <td height="40"><div align="center" class="style5"><a href="index.htm">网页版</a></div></td>
   </tr>
 </table>
 <p>&nbsp;</p>
