--- a/2-1-a-我的读书笔记-002.htm
+++ b/2-1-a-我的读书笔记-002.htm
@@ -12,12 +12,11 @@ body {
 .style1 {font-size: 36px}
 .style2 {font-size: 12px}
 .style3 {font-size: 48px}
-.style4 {font-size: 36px}
 -->
 </style></head>
 
 <body>
-<p align="left" class="style2"><a href="index.htm" target="_self">猪猪乐园</a>-读书笔记-bj001 </p>
+<p align="left" class="style2"><span class="style1"><a href="index-&#23567;.htm" target="_self">猪猪乐园</a>-读书笔记-bj002</span></p>
 <p align="center" class="style3">生命游戏（下）</p>
 <p align="center" class="style1">&nbsp;</p>
 <p align="left" class="style1">九、幻象构建与瓦解</p>
