--- a/index-小.htm
+++ b/index-小.htm
@@ -15,62 +15,65 @@ body {
 </style></head>
 
 <body>
-<table width="800" border="1" align="center">
+<h6>&nbsp;</h6>
+<table width="900" border="1" align="center">
   <tr bgcolor="#00CCFF">
-    <td width="148" height="40"><div align="center" class="style5">读书笔记</div></td>
-    <td width="168" height="40"><div align="center" class="style5">我的网站</div></td>
-    <td width="148" height="40"><div align="center" class="style5">我的学习</div></td>
-    <td width="152" height="40"><div align="center" class="style5">我的创作</div></td>
-    <td width="150" height="40"><div align="center" class="style4"><span class="style5"></span></div></td>
+    <td width="167" height="40"><div align="center" class="style5">读书笔记</div></td>
+    <td width="189" height="40"><div align="center" class="style5">知识卡片</div></td>
+    <td width="167" height="40"><div align="center" class="style5">学习资源</div></td>
+    <td width="171" height="40"><div align="center" class="style5">我的创作</div></td>
+    <td width="172" height="40"><div align="center" class="style4"><span class="style5"></span></div></td>
   </tr>
   <tr>
     <td height="40"><div align="center" class="style5"><a href="2-1-a-&#25105;&#30340;&#35835;&#20070;&#31508;&#35760;-001.htm" target="_blank">生命游戏(上)</a></div></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><div align="center" class="style5"><a href="https://appgvxduqld1024.h5.xiaoeknow.com/p/decorate/homepage?share_user_id=u_5e6f7093cee56_KjtieEBn5C&entry=2&entry_type=2001" target="_blank">正心读书会</a></div></td>
-    <td>&nbsp;</td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center" class="style5">
+      <div align="center"><a href="https://appgvxduqld1024.h5.xiaoeknow.com/p/decorate/homepage?share_user_id=u_5e6f7093cee56_KjtieEBn5C&entry=2&entry_type=2001" target="_blank">正心读书会</a></div>
+    </div></td>
+    <td><div align="center"></div></td>
     <td height="40"><div align="center"><span class="style4"><span class="style5"></span></span></div></td>
   </tr>
   <tr>
     <td height="40"><div align="center"><span class="style5"><a href="2-1-a-&#25105;&#30340;&#35835;&#20070;&#31508;&#35760;-002.htm" target="_blank">生命游戏(下)</a></span></div></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td>&nbsp;</td>
-    <td height="40"><span class="style5"></span></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td><div align="center"></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
   </tr>
   <tr>
     <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td>&nbsp;</td>
-    <td height="40"><span class="style5"></span></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td><div align="center"></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
   </tr>
   <tr>
     <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td>&nbsp;</td>
-    <td height="40"><span class="style5"></span></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td><div align="center"></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
   </tr>
   <tr>
     <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td>&nbsp;</td>
-    <td height="40"><span class="style5"></span></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td><div align="center"></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
   </tr>
   <tr>
     <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
   </tr>
   <tr>
     <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
-    <td height="40"><span class="style5"></span></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
+    <td height="40"><div align="center"><span class="style5"></span></div></td>
   </tr>
   <tr>
     <td height="40"><span class="style5"></span></td>
@@ -224,7 +227,217 @@ body {
     <td height="40"><span class="style5"></span></td>
     <td height="40"><span class="style5"></span></td>
     <td height="40"><span class="style5"></span></td>
-    <td height="40"><div align="center" class="style5"><a href="index.htm">网页版</a></div></td>
+    <td height="40"><div align="center" class="style5"></div></td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40">&nbsp;</td>
+    <td height="40"><div align="center"><span class="style5"><a href="index.htm">网页版</a></span></div></td>
   </tr>
 </table>
 <p>&nbsp;</p>
