--- a/index-小.htm
+++ b/index-小.htm
@@ -35,7 +35,7 @@ body {
   <tr>
     <td height="40"><div align="center" class="style6"><a href="2-1-a-&#25105;&#30340;&#35835;&#20070;&#31508;&#35760;-002.htm" target="_blank">生命游戏(下)</a></div></td>
     <td height="40"><div align="center"><span class="style5"><span class="style6"></span></span></div></td>
-    <td height="40"><div align="center"><span class="style5"><span class="style6"></span></span></div></td>
+    <td height="40"><div align="center"><span class="style6"><a href="sp-3-1-1%20%20&#29992;&#23494;&#30721;&#36827;&#34892;&#21152;&#23494;.swf" target="_blank">EXCEL学习</a></span></div></td>
     <td><div align="center"><span class="style6"></span></div></td>
   </tr>
   <tr>
