--- a/index.htm
+++ b/index.htm
@@ -107,7 +107,7 @@ body {
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center" class="style4"><a href="https://www.ludashi.com/" target="_blank">鲁大师</a></div></td>
   </tr>
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">6</div></td>
@@ -120,7 +120,7 @@ body {
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center" class="style4"><a href="https://www.flash.cn/" target="_blank">flash官网</a></div></td>
   </tr>
   <tr>
     <td bgcolor="#666666"><div align="center" class="style6">7</div></td>
@@ -184,7 +184,7 @@ body {
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center" class="style4"><a href="index-&#22806;&#23567;.htm" target="_blank">对外发布</a></div></td>
     <td width="155" height="40"><div align="center" class="style4"><a href="index-&#23567;.htm" target="_blank">手机版</a></div></td>
   </tr>
 </table>
@@ -200,7 +200,7 @@ body {
     <td width="159" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style3"></span></a></div></td>
     <td width="159" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style3"></span></a></div></td>
     <td width="159" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style3"></span></a></div></td>
-    <td width="159" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style3"></span></a></div></td>
+    <td width="159" height="40"><div align="center"><span class="style4"><a href="10-index%20-%20&#32593;&#31449;&#23548;&#33322;.htm" target="_blank">网站导航</a></span></div></td>
   </tr>
   <tr bgcolor="#0099FF">
     <td width="159" height="40">&nbsp;</td>
