--- a/index-外小.htm
+++ b/index-外小.htm
@@ -25,13 +25,13 @@ body {
     <td width="224" height="40">&nbsp;</td>
   </tr>
   <tr>
-    <td height="40"><span class="style6"><a href="&#22806;-&#27599;&#26085;&#20998;&#20139;-001-20230614.htm" target="_blank">001-20230614</a></span></td>
+    <td height="40"><div align="center"><span class="style5"><a href="&#22806;-&#27599;&#26085;&#20998;&#20139;-001-20230614.htm" target="_blank">1对境心不起</a></span></div></td>
     <td height="40"><div align="center"><span class="style5"><span class="style6"></span></span></div></td>
     <td height="40"><div align="center"><span class="style5"><span class="style6"></span></span></div></td>
     <td><div align="center"><span class="style6"></span></div></td>
   </tr>
   <tr>
-    <td height="40">&nbsp;</td>
+    <td height="40"><div align="center"><span class="style5"><a href="&#22806;-&#27599;&#26085;&#20998;&#20139;-002-20230621.htm" target="_blank">2何谓观心</a></span></div></td>
     <td height="40"><div align="center"><span class="style5"><span class="style6"></span></span></div></td>
     <td height="40"><div align="center"><span class="style5"><span class="style6"></span></span></div></td>
     <td><div align="center"><span class="style6"></span></div></td>
