--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@ body {
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">1</div></td>
     <td width="155" height="40"><div align="center"><a href="https://www.hrfjw.com/" target="_blank">佛教网站</a></div></td>
-    <td height="40">&nbsp;</td>
+    <td height="40"><div align="center"><span class="style4"><a href="https://markdown.com.cn/" target="_blank">markdown</a></span></div></td>
     <td height="40"><div align="center"><span class="style4"><a href="https://appgvxduqld1024.h5.xiaoeknow.com/p/decorate/homepage?share_user_id=u_5e6f7093cee56_KjtieEBn5C&entry=2&entry_type=2001" target="_blank">正心读书会</a></span></div></td>
     <td width="159"><div align="center"><span class="style4"><a href="https://www.jianshu.com/" target="_blank">简书</a></span></div></td>
     <td height="40"><div align="center"><span class="style4"></span></div></td>
@@ -60,7 +60,7 @@ body {
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">2</div></td>
     <td width="155" height="40"><div align="center"></div></td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center"><span class="style4"><a href="&#32593;&#31449;&#25645;&#24314;&#25945;&#23398;/&#32593;&#31449;&#25645;&#24314;&#25945;&#23398;.htm" target="_blank">网站搭建教学</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="159"><div align="center"><span class="style4"><a href="https://www.wiz.cn/zh-cn" target="_blank">为知笔记</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
@@ -73,7 +73,7 @@ body {
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">3</div></td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center"><span class="style4"><a href="https://huke88.com/" target="_blank">虎课网</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="159"><div align="center"><span class="style4"><a href="https://zhihu.com" target="_blank">知乎</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
@@ -86,7 +86,7 @@ body {
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">4</div></td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center"><span class="style4"><a href="https://developer.huawei.com/consumer/cn/training/study-path/101667550095504391?ha_source=sem&ha_sourceId=89000434" target="_blank">鸿蒙开发课程</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="159"><div align="center"><span class="style4"><a href="https://shimo.im/" target="_blank">石墨文档</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
@@ -99,7 +99,7 @@ body {
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">5</div></td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40"><div align="center"><span class="style4"><a href="https://developer.harmonyos.com/" target="_blank">鸿蒙官网</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="159"><div align="center"><span class="style4"><a href="https://wx.zsxq.com" target="_blank">知识星球</a></span></div></td>
     <td width="155" height="40">&nbsp;</td>
@@ -146,7 +146,7 @@ body {
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
+    <td width="155" height="40"><div align="center"><a href="https://www.cnblogs.com/ygunoil/p/17443751.html" target="_blank">AI镜相网站</a></div></td>
   </tr>
   <tr>
     <td width="20" bgcolor="#666666"><div align="center" class="style6">9</div></td>
@@ -2035,7 +2035,7 @@ body {
     <td bgcolor="#666666"><div align="center" class="style6">7</div></td>
     <td height="40">&nbsp;</td>
     <td height="40">&nbsp;</td>
-    <td height="40">&nbsp;</td>
+    <td height="40">零极限</td>
     <td height="40">&nbsp;</td>
     <td height="40">&nbsp;</td>
     <td height="40">&nbsp;</td>
@@ -2048,7 +2048,7 @@ body {
     <td width="20" bgcolor="#666666"><div align="center" class="style6">8</div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">生命的重建</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
@@ -2061,7 +2061,7 @@ body {
     <td width="20" bgcolor="#666666"><div align="center" class="style6">9</div></td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
-    <td width="155" height="40">&nbsp;</td>
+    <td width="155" height="40">奇迹课程</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
     <td width="155" height="40">&nbsp;</td>
@@ -2074,7 +2074,7 @@ body {
     <td width="20" bgcolor="#666666"><div align="center" class="style6">10</div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
-    <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
+    <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a>太傻天书</div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
     <td width="155" height="40"><div align="center"><a href="https://1luckypig.github.io"><span class="style4"></span></a></div></td>
